@@ -1,3 +1,8 @@
+06/20/2015
+  -Removed duplicate _buildEIPSendRRDatHeader, renamed some stuff
+  -Fixed TagName length, was grabbing extra data
+  -Write now reports an error if it fails
+
 06/17/15
   -Created LGXTag object, GetTagList() now returns list of LGXTag
   -Modified read for string to accomodate custom string size data types
